@@ -1,4 +1,10 @@
 
+2001-06-11  Mattia Barbon  <mbarbon@dsi.unive.it>
+
+	* include/shlobj.h (struct _browseinfo): UNICODE it.
+	(SHBrowseForFolder): Ditto.
+	(SHGetPathFromIDList): Ditto.
+
 2001.06.11  Earnie Boyd  <earnie@users.sourceforge.net>
 
 	* include/basetsd.h: RC_INVOKED protection and realignment.
